# abm-colombia-2026-runoff-20-day-simulation

./: .env.example  .gitattributes  .gitignore  02_X_API_v2_Second_Round_Campaign_Only_Execution.ipynb  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA.md  MANIFEST.sha256  PROJECT_STATUS.md  README.md  README_ES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  methodological_issue.md
.github/workflows/: pages.yml  validate.yml
configs/: README.md  llm_config.example.json  model_config.full.json  model_config.pilot.json
data/: README.md
data/source_package_v5_1/: audit_manifest_v5_1.json  blank_vote_coverage_2026_v5_1.csv  blank_vote_public_position_audit_2026_v1.csv  campaign_personality_signals_v2.csv  (+10 more)
docs/: README.md
methodology/: ABM_RULES.md  ASSUMPTIONS_AND_LIMITATIONS.md  DATA_CARD.md  DATA_DICTIONARY.md  ETHICS_AND_LIMITATIONS.md  GLOSSARY.md  LLM_DELIBERATION_PROTOCOL.md  MODEL_CARD.md  ODD_D_MODEL_DESCRIPTION.md  README.md  REFERENCES.md  REPRODUCIBILITY.md  SOURCE_BALANCING.md  VALIDATION_PROTOCOL.md
notebooks/: Colombia_2026_Presidential_Runoff_The_20_Day_Simulation.ipynb  MADM_COL2026_Ask_the_Model_Offline_Research_Analysis_v3_1_1.ipynb  README.md
releases/: README.md
results/: README.md
scripts/: README.md  generate_checksums.py  publish_dashboard.py  validate_data_package.py  validate_results.py
tests/: README.md  test_data_package.py  test_notebook_and_site.py  test_results.py
(+17 files in other folders)
